--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "gulp": "gulp"
   },
   "devDependencies": {
+    "browser-sync": "^3.0.4",
+    "del": "^8.0.1",
     "gulp": "^5.0.1",
     "gulp-cleaner-css": "^4.3.2",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^9.1.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-useref": "^5.0.0"
+    "imagemin": "^9.0.1"
+  },
+  "dependencies": {
+    "gulp-useref": "^5.0.0",
+    "useref": "^1.4.4"
   }
 }
