--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         - name: Install dependencies
           run: npm ci
         - name: Gulp runner
-          run: npx gulp
+          run: npm run build
         - name: Configure AWS credentials
           uses: aws-actions/configure-aws-credentials@v4
           with:
